# discoverzo-computo

./: ARTIFACT_MANIFEST.json  AUTHOR_METADATA.md  CITATION.cff  LICENSE  LICENSE-CONTENT  Makefile  README.md  README.qmd  REPRODUCIBILITY.md  SHA256SUMS  _quarto.yml  environment-coco.yml  environment.yml  main.qmd  pyproject.toml  references.bib  requirements-lock.txt  requirements.txt  setup-env-ci.sh  setup-render-ci.sh
configs/: high_power.yaml  quick.yaml  verified.yaml
datasets/: README.md  benchmark_catalog.csv  seed_ledger.csv
datasets/generated_inputs/: amortization_instances.npz  amortization_metadata.csv  dimension_scaling_metadata.csv  optimization_benchmark_instances.npz  optimization_benchmark_metadata.csv
datasets/raw_outputs/: dimension_scaling.csv  moment_bias.csv
datasets/summary_outputs/: amortization_summary.csv  dimension_scaling_summary.csv  optimization_summary.csv
docs/: VALIDATION.md  experiment_protocol.md  theory_audit.md
figures/: README.md
figures/code/: figure_01_moment_operator_error.py  figure_02_moment_subspace_error.py  figure_03_rank_recovery.py  figure_04_dimension_scaling.py  figure_05_optimization_heatmap.py  figure_07_amortization.py  (+2 more)
scripts/: make_manuscript_assets.py  paired_analysis.py  run_verified.py  summarize_existing.py  validate_manuscript.py  validate_research_artifact.py
tables/: TABLES.md
tests/: test_benchmarks.py  test_experiments.py  test_optimizers.py  test_subspace.py  test_theory_formula.py
validation/: BUILD_VALIDATION.md  artifact_validation.txt  asset_generation.txt  manuscript_validation.txt
(+41 files in other folders)
