[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discoverzo"
version = "0.1.0"
description = "Cross-fitted active-subspace discovery and dimension-adaptive zeroth-order optimization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Zichen Song"}]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "tqdm>=4.66"
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5"]
coco = ["coco-experiment>=2.7"]

[project.scripts]
discoverzo-run = "discoverzo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
